samples/_failures_safe/1761400015_49bd3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_420954d2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_420954d2.c:153:9: error: expected declaration or statement at end of input
  153 |         (*token_count)++;
      |         ^
./samples/SAFE/__tmp_420954d2.c:153:9: error: expected declaration or statement at end of input
